Add input button to upload local IFC files

--- a/examples/js/styles.css
+++ b/examples/js/styles.css
@@ -13,3 +13,10 @@ html, body {
     left: 0;
     outline: none;
 }
+
+#openFileDialog {
+    z-index: 1;
+    position: fixed;
+    top: 10px;
+    left: 10px;
+}
